# MelTake

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qmake_project.pro  resources.qrc  ui_mainwindow.h
build-audio_app-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-audio_app-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/audio_app_autogen/: deps
build-audio_app-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/audio_app_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-audio_app-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/audio_app_autogen/include/: ui_mainwindow.h
header_files/: fwd.hpp  playlist_structure.hpp  settings_structure.hpp
import/: settings_structure.hpp  track_structure.hpp
include/: AudioVisualizer.hpp  audio_constants.hpp  audio_decoder.hpp  audio_visualizer.hpp  fwd.hpp  playlist_structure.hpp  settings_structure.hpp  spectrum_analyzer.hpp  track_structure.hpp
resources/: fshader.frag  resiurces.qrc  vshader.vert
shaders/: main.frag
source_files/: playlist_functions.cpp  track_functions.cpp
src/: AudioVisualizer.cpp  audio_decoder.cpp  audio_visualizer.cpp  main.cpp  music_base.cpp  playlist_functions.cpp  settings_functions.cpp  spectrum_analyzer.cpp  track_functions.cpp
